# JOB-20260613144931-000091

./: Dockerfile  OUT_OF_SCOPE.md  PLAN-01.md  README.md  SPEC.md  SPEC.txt  config.yaml  docker-compose.yml  explore_structure.sh  job.json  package.json  pyproject.toml  requirements.txt
.planning/phases/01-1.-project-overview/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/02-2.-technical-stack/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/03-3.-architecture/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/04-4.-data-model/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/05-5.-project-structure/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/06-6.-out-of-scope/: -SUMMARY-01.md  PLAN-01.md
.planning/phases/07-7.-acceptance-criteria/: -SUMMARY-01.md  PLAN-01.md
src/mcp_server/: __init__.py  cache.py  config.py  database.py  main.py
src/mcp_server/agents/: data_retrieval.py  query_understanding.py  response_synthesis.py
src/mcp_server/protocol/: errors.py
tests/: conftest.py  test_tools.py
