[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for natural-language data querying"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "mcp>=0.3.0",
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "ruff>=0.1",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
]

[project.scripts]
mcp-server = "mcp_server.main:run"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
